<resources>
    <string name="app_name">Alguarisa</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_newpasswrod">Nuevo Password</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="new_user">¿Nuevo Usuario? Regístrate</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_telefono">Teléfono</string>

    <string name="dajelo_blanco">Déjalo en blanco para no cambiarlo</string>
    <string name="min_8_caracteres">Debe tener al menos 8 caracteres</string>
    <string name="min_4_caracteres">Debe tener al menos 4 caracteres</string>
    <string name="error_email">Debe ser un Email valido</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="ingrese_email">Ingrese un Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_perfil">Cuenta</string>
    <string name="menu_setting">Ajustes</string>
    <string name="menu_escaner">Escáner</string>
    <string name="menu_buscar">Buscar</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="usuarios">Usuarios</string>
    <string name="familias">Familias</string>
    <string name="modulo_clap">Modulo CLAP</string>
    <string name="ferias_campo">Ferias del Campo Soberano</string>
    <string name="plan_proteico">Plan Proteico</string>
    <string name="tienda_fisica">Tiendas Físicas</string>
    <string name="tienda_enlinea">Tiendas en Línea</string>
    <string name="tienda_movil">Tienda Móvil</string>
</resources>